# oath-lang

./: .gitignore  .mcp.json  CLAUDE.md  DESIGN.md  LICENSE  Makefile  README.md
.github/workflows/: conformance.yml
codebase/: log.jsonl  names.json
docs/: SPEC.md  bignum-integers.md  discovery.md  effects.md  floats.md  generics.md  native-containers.md  structural-strings.md  teamstore.md
examples/: arith.oath  bad_reverse.oath  circle.oath  cli.oath  convert.oath  ediv.oath  extras.oath  float.oath  generic.oath  inferred.oath  interval.oath  ints.oath  leaky.oath  list.oath  map.oath  merge.oath  netcli.oath  nontotal.oath  queue.oath  rat.oath  records.oath  rle.oath  rot.oath  rot_f.oath  rot_h2.oath  rot_h3.oath  rot_hl.oath  service.oath  set.oath  sort.oath  stateful.oath  str.oath  strings.oath  tree.oath  undertested.oath
fixtures/: MANIFEST.md  hashes.txt
oath/: agent.go  api.go  ast.go  canon.go  check.go  compile.go  compile_test.go  confinement.go  cross.go  cross_test.go  eval.go  find_test.go  fixtures.go  gen.go  go.mod  http.go  kernel_test.go  main.go  mcp.go  migrate.go  mutate.go  nowasm.go  policy.go  pretty.go  prove.go  ranking.go  registry.go  store.go  surface.go  termination.go  verify.go  wasm.go  z3host_native.go  z3host_wasm.go
oathrs/: Cargo.toml  DIVERGENCES.md  conformance.sh  wasm-demo.sh
oathrs/src/: analyze.rs  check.rs  elaborate.rs  eval.rs  gen.rs  hash.rs  ir.rs  lib.rs  main.rs  prove.rs  sexpr.rs  value.rs  verify.rs
website/: .gitignore  README.md  next.config.mjs  package-lock.json  package.json
(+402 files in other folders)
